CAL-168 fix overlapping avatar of attendees invited in an event

--- a/modules/linagora.esn.calendar/frontend/css/event-quick-form.less
+++ b/modules/linagora.esn.calendar/frontend/css/event-quick-form.less
@@ -85,6 +85,25 @@
     }
   }
 
+  .attendee-list-item {
+    .attendee-avatar {
+      .checkbox {
+        top: 25px;
+      }
+    }
+  }
+}
+
+@media (min-width: @screen-md-min) {
+  .event-quick-form {
+    .attendee-list-item {
+      .attendee-avatar {
+        .checkbox {
+          top: 3px;
+        }
+      }
+    }
+  }
 }
 
 @media (min-width: @screen-sm-min) {
